# insurance-sensitivity

./: README.md  pyproject.toml
notebooks/: benchmark_sensitivity.py
src/insurance_sensitivity/: __init__.py  shapley.py  sobol.py
tests/: test_coverage_gaps.py  test_sensitivity.py
