[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-sensitivity"
version = "0.1.0"
description = "Global sensitivity analysis (Sobol and Shapley effects) for insurance pricing models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_sensitivity"]
